Sun Aug 16 15:25:26 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/csv.rb: Change magic comment to US-ASCII in order to
	  make literals as US-ASCII.

Sun Aug 16 10:45:10 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* regparse.c (parse_char_class, parse_exp, parse_branch),
	  (parse_subexp): fixed memory leak.  a patch from Ralf Junker
	  <ralfjunker AT gmx.de> at [ruby-core:24921].

Sun Aug 16 10:38:23 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (vm_backtrace_each, vm_backtrace_push),
	  vm_eval.c (print_backtrace), vm_dump.c (bugreport_backtrace):
	  rb_backtrace_iter_func now takes VALUE as file and method names.

Sun Aug 16 03:06:59 2009  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (opt_eq_func): fix optimization bug.  This issue
	  was found out and debugged with Takuto Hayashi at Security and
	  Programming camp 2009.

Sun Aug 16 01:10:00 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* regparse.c (add_ctype_to_cc_by_range): fix the first
	  character bigger than sb_out was dropped.

	* test/ruby/test_regexp.rb (TestRegexp#test_posix_bracket):
	  add tests for above.

Sun Aug 16 00:30:33 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/oniguruma.h
	  (ONIGENC_CTYPE_SPECIAL_MASK): added.
	  (ONIGENC_CTYPE_D): ditto.
	  (ONIGENC_CTYPE_S): ditto.
	  (ONIGENC_CTYPE_W): ditto.

	* regparse.c: \d, \s and \w are now non Unicode class.
	  [ruby-dev:39026]
	  (fetch_token_in_cc): use ONIGENC_CTYPE_[DSW] for \d/\s/\w.
	  (fetch_token): ditto.
	  (add_ctype_to_cc): add routines for ONIGENC_CTYPE_[DSW].
	  (parse_exp): ditto.

	* test/ruby/test_regexp.rb (TestRegexp#test_char_class):
	  add tests for above.

Sat Aug 15 10:39:53 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (fname, string_dvar, sym, dsym, f_arglist): removed
	  duplications.

Fri Aug 14 20:03:10 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_check_safe_str): deprecated.

	* ext/openssl/ossl_x509store.c (ossl_x509store_add_{file,path}):