@@ -1,3 +1,9 @@
+Sun Aug 16 21:31:21 2009  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* lib/date/format.rb: suppressed a warning.
+
+	* lib/irb/ruby-lex.rb: ditto.
+
 Sun Aug 16 15:25:26 2009  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* lib/csv.rb: Change magic comment to US-ASCII in order to
